@@ -28,7 +28,6 @@ import static org.springframework.http.HttpStatus.NOT_FOUND;
 import static org.springframework.http.HttpStatus.OK;
 
 class AccountTest extends AccountHelperBase {
-    private static final String ADMIN_ID = "x-admin-id";
     private static final String SUPER_ADMIN_CTSC_ROLE_NAME = "INTERNAL_SUPER_ADMIN_CTSC";
     private static final String SUPER_ADMIN_LOCAL_ROLE_NAME = "INTERNAL_SUPER_ADMIN_LOCAL";
 
@@ -49,13 +48,16 @@ class AccountTest extends AccountHelperBase {
         idMap.put(Roles.SYSTEM_ADMIN, createSystemAdminAccount().getUserId());
 
         idMap.put(Roles.INTERNAL_SUPER_ADMIN_CTSC, getCreatedAccountUserId(
-            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_SUPER_ADMIN_CTSC)));
+            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_SUPER_ADMIN_CTSC,
+                          idMap.get(Roles.SYSTEM_ADMIN))));
 
         idMap.put(Roles.INTERNAL_SUPER_ADMIN_LOCAL, getCreatedAccountUserId(
-            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_SUPER_ADMIN_LOCAL)));
+            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_SUPER_ADMIN_LOCAL,
+                          idMap.get(Roles.SYSTEM_ADMIN))));
 
         idMap.put(Roles.INTERNAL_ADMIN_LOCAL, getCreatedAccountUserId(
-            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_ADMIN_LOCAL)));
+            createAccount(generateEmail(), UUID.randomUUID().toString(), Roles.INTERNAL_ADMIN_LOCAL,
+                          idMap.get(Roles.SYSTEM_ADMIN))));
     }
 
     @AfterAll
@@ -78,7 +80,7 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToCreateAccount() throws Exception {
-        Response createdResponse = createAccount(email, provenanceId);
+        Response createdResponse = createAccount(email, provenanceId, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
         assertThat(createdResponse.getBody().as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).size())
             .isEqualTo(1);
     }
@@ -88,7 +90,7 @@ class AccountTest extends AccountHelperBase {
         List<PiUser> thirdParty = generateThirdParty();
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
 
         final Response createResponse = doPostRequest(CREATE_PI_ACCOUNT,
                                                       headers, objectMapper.writeValueAsString(thirdParty));
@@ -101,7 +103,7 @@ class AccountTest extends AccountHelperBase {
         List<PiUser> thirdParty = generateThirdParty();
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ISSUER_ID, idMap.get(Roles.SYSTEM_ADMIN));
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
 
         final Response createdResponse = doPostRequest(CREATE_PI_ACCOUNT,
                                                       headers, objectMapper.writeValueAsString(thirdParty));
@@ -109,14 +111,17 @@ class AccountTest extends AccountHelperBase {
         assertThat(createdResponse.getStatusCode()).isEqualTo(CREATED.value());
 
         thirdPartyUserId = (String) createdResponse.getBody()
-            .as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).get(0);
+            .as(CREATED_RESPONSE_TYPE).get(CreationEnum.CREATED_ACCOUNTS).getFirst();
     }
 
     @Test
     void shouldBeAbleToGetAnAccountByUserId() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId,
+                                                                     idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)));
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+        Response getUserResponse = doGetRequest(String.format(GET_BY_USER_ID, createdUserId), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(PiUser.class)).matches(user -> user.getEmail().equals(email));
@@ -124,9 +129,11 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToGetAnAccountByProvenanceId() throws Exception {
-        createAccount(email, provenanceId);
+        createAccount(email, provenanceId, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(PiUser.class)).matches(user -> user.getEmail().equals(email));
@@ -140,10 +147,13 @@ class AccountTest extends AccountHelperBase {
         "CIVIL_DAILY_CAUSE_LIST,CLASSIFIED,false"
     })
     void checkIfUserIsAuthorised(String listType, String sensitivity, boolean shouldBeAuthorised) throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId,
+                                                                     idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)));
 
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
         Response getUserResponse = doGetRequest(String.format(USER_IS_AUTHORISED_FOR_LIST, createdUserId,
-                                                              listType, sensitivity), bearer);
+                                                              listType, sensitivity), headers);
 
         assertThat(getUserResponse.getStatusCode()).isEqualTo(OK.value());
         assertThat(getUserResponse.getBody().as(Boolean.class)).isEqualTo(shouldBeAuthorised);
@@ -151,18 +161,20 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToUpdateAccount() throws Exception {
-        createAccount(email, provenanceId);
+        createAccount(email, provenanceId, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
 
         Map<String, String> updateParams = new ConcurrentHashMap<>();
         updateParams.put("lastVerifiedDate", "2024-12-01T01:01:01.123456Z");
         updateParams.put("lastSignedInDate", "2024-12-02T01:01:01.123456Z");
 
-        Response updateResponse = doPutRequestWithBody(String.format(UPDATE_ACCOUNT, provenanceId), bearer,
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+        Response updateResponse = doPutRequestWithBody(String.format(UPDATE_ACCOUNT, provenanceId), headers,
                                                        objectMapper.writeValueAsString(updateParams));
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(OK.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
         PiUser user = getUserResponse.getBody().as(PiUser.class);
 
         assertThat(user.getLastVerifiedDate()).isEqualTo(LocalDateTime.parse("2024-12-01T01:01:01"));
@@ -171,32 +183,26 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldBeAbleToDeleteAccount() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId,
+                                                                     idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)));
 
-        Response deleteResponse = doDeleteRequest(String.format(DELETE_ACCOUNT, createdUserId), bearer);
+        Map<String, String> headers = new ConcurrentHashMap<>(bearer);
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+        Response deleteResponse = doDeleteRequest(String.format(DELETE_ACCOUNT, createdUserId), headers);
 
         assertThat(deleteResponse.getStatusCode()).isEqualTo(OK.value());
 
-        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), bearer);
+        Response getUserResponse = doGetRequest(String.format(GET_BY_PROVENANCE_ID, provenanceId), headers);
         assertThat(getUserResponse.getStatusCode()).isEqualTo(NOT_FOUND.value());
     }
 
-    @ParameterizedTest
-    @CsvSource({
-        "SYSTEM_ADMIN,PI_AAD,VERIFIED",
-        "INTERNAL_SUPER_ADMIN_CTSC,PI_AAD,INTERNAL_ADMIN_LOCAL",
-        "INTERNAL_SUPER_ADMIN_LOCAL,PI_AAD,INTERNAL_ADMIN_LOCAL",
-        "INTERNAL_ADMIN_LOCAL,SSO,INTERNAL_ADMIN_LOCAL",
-    })
-    void shouldBeAbleToDeleteAccount(String role, String provenance, String createdUserRole)
-        throws Exception {
+    @Test
+    void shouldBeAbleToDeleteAccountV2() throws Exception {
         String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId,
-                                                                     Roles.valueOf(createdUserRole),
-                                                                     UserProvenances.valueOf(provenance)));
+                idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, idMap.get(Roles.valueOf(role)));
-
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
 
         assertThat(deleteResponse.getStatusCode()).isEqualTo(OK.value());
@@ -208,13 +214,15 @@ class AccountTest extends AccountHelperBase {
     @ParameterizedTest
     @CsvSource({
         "INTERNAL_ADMIN_LOCAL,INTERNAL_ADMIN_LOCAL",
+        "INTERNAL_SUPER_ADMIN_CTSC,INTERNAL_ADMIN_LOCAL",
         "INTERNAL_SUPER_ADMIN_CTSC,VERIFIED"
     })
     void shouldNotBeAbleToDeleteAccount(String adminRole, String createdRole) throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, Roles.valueOf(createdRole)));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId, Roles.valueOf(createdRole),
+                                                                     idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)));
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, idMap.get(Roles.valueOf(adminRole)));
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.valueOf(adminRole)));
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), headers);
 
@@ -226,7 +234,8 @@ class AccountTest extends AccountHelperBase {
 
     @Test
     void shouldNotBeAbleToDeleteAccountWhenUserNotProvided() throws Exception {
-        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId));
+        String createdUserId = getCreatedAccountUserId(createAccount(email, provenanceId,
+                                                                     idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)));
 
         Response deleteResponse = doDeleteRequest(String.format(DELETE_ENDPOINT_V2, createdUserId), bearer);
 
@@ -239,7 +248,7 @@ class AccountTest extends AccountHelperBase {
     @Test
     void shouldNotBeAbleToUpdateTheirOwnAccount() {
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC));
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC),
@@ -247,8 +256,11 @@ class AccountTest extends AccountHelperBase {
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
+        Map<String, String> getUserHeaders = new ConcurrentHashMap<>(bearer);
+        getUserHeaders.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+
         PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)), bearer)
+            doGetRequest(String.format(GET_BY_USER_ID, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)), getUserHeaders)
                 .getBody().as(PiUser.class);
 
         assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
@@ -262,9 +274,12 @@ class AccountTest extends AccountHelperBase {
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
+        Map<String, String> getUserHeaders = new ConcurrentHashMap<>(bearer);
+        getUserHeaders.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+
         PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)),
-                bearer).getBody().as(PiUser.class);
+            doGetRequest(String.format(GET_BY_USER_ID, idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC)), getUserHeaders)
+                    .getBody().as(PiUser.class);
 
         assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
     }
@@ -278,18 +293,23 @@ class AccountTest extends AccountHelperBase {
     })
     void shouldBeAbleToUpdateRole(String role, String userProvenance) throws JsonProcessingException {
         String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL, UserProvenances.valueOf(userProvenance)));
+            createAccount(email, provenanceId, Roles.INTERNAL_ADMIN_LOCAL, UserProvenances.valueOf(userProvenance),
+                          idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC))
+        );
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, idMap.get(Roles.valueOf(role)));
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.valueOf(role)));
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(OK.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+        Map<String, String> getUserHeaders = new ConcurrentHashMap<>(bearer);
+        getUserHeaders.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+
+        PiUser getUserResponse = doGetRequest(String.format(GET_BY_USER_ID, createdUserId), getUserHeaders)
+                .getBody().as(PiUser.class);
 
         assertThat(getUserResponse.getRoles()).isEqualTo(Roles.INTERNAL_SUPER_ADMIN_CTSC);
     }
@@ -301,20 +321,23 @@ class AccountTest extends AccountHelperBase {
     })
     void shouldNotBeAbleToUpdateRole(String adminRole, String createdRole) throws JsonProcessingException {
         String createdUserId = getCreatedAccountUserId(
-            createAccount(email, provenanceId, Roles.valueOf(createdRole)));
+            createAccount(email, provenanceId, Roles.valueOf(createdRole), idMap.get(Roles.INTERNAL_SUPER_ADMIN_CTSC))
+        );
 
         Map<String, String> headers = new ConcurrentHashMap<>(bearer);
-        headers.put(ADMIN_ID, idMap.get(Roles.valueOf(adminRole)));
+        headers.put(REQUESTER_ID_HEADER, idMap.get(Roles.valueOf(adminRole)));
 
         Response updateResponse = doPutRequest(
             String.format(UPDATE_ACCOUNT_ROLE, createdUserId, SUPER_ADMIN_CTSC_ROLE_NAME), headers);
 
         assertThat(updateResponse.getStatusCode()).isEqualTo(FORBIDDEN.value());
 
-        PiUser getUserResponse =
-            doGetRequest(String.format(GET_BY_USER_ID, createdUserId), bearer).getBody().as(PiUser.class);
+        Map<String, String> getUserHeaders = new ConcurrentHashMap<>(bearer);
+        getUserHeaders.put(REQUESTER_ID_HEADER, idMap.get(Roles.SYSTEM_ADMIN));
+
+        PiUser getUserResponse = doGetRequest(String.format(GET_BY_USER_ID, createdUserId), getUserHeaders)
+                .getBody().as(PiUser.class);
 
         assertThat(getUserResponse.getRoles()).isEqualTo(Roles.valueOf(createdRole));
     }
-
 }
